# bevy_magicleap_one

./: .gitignore  Cargo.toml  Makefile.toml  binBevyMagicLeapOne-2023-09-04.dump
crates/bevy_asset_0.11.2/: Cargo.toml
crates/bevy_asset_0.11.2/src/: lib.rs
crates/bevy_asset_0.11.2/src/io/: mod.rs  no_asset_io.rs
crates/bevy_pbr_0.11.2/: Cargo.toml
crates/bevy_pbr_0.11.2/src/render/: pbr.wgsl
src/: _main.rs  callbacks.rs  graphics.rs  lib.rs  log.rs  magicleap_one_plugin.rs  test_systems.rs
wrapper/: BevyMagicLeapOne.mabu  BevyMagicLeapOne.package  bevy_magicleap_one.h  main.cpp  manifest.xml  run.bat
