#cargo-features = ["per-package-target"]

[package]
name = "bevy_magicleap_one"
version = "0.1.0"
edition = "2021"
#forced-target = "aarch64-linux-android"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
exclude = ["crates/*"]


[lib]
name = "bevy_magicleap_one"
crate-type = ["staticlib"]
test = false
bench = false

[dependencies]
smallvec = "1.10.0"

bevy = { version = "0.11.2", default-features = false, features = [
    "bevy_render",
    "trace",
    "png",
    "jpeg",
    "bevy_pbr",
    "bevy_core_pipeline",
    "bevy_gizmos",
    "tonemapping_luts",
    "zstd",
    "ktx2",
] }


tracing-subscriber = "0.3.16"
tracing = "0.1.37"
tracing-core = "0.1.30"

wgpu = "0.16.0"
wgpu-hal = { version = "0.16.0", features = ["vulkan"] }
ash = "0.37.3"

log = "0.4.19"
tracing-error = "0.2.0"

libc = "0.2.147"
env_logger = "0.10.0"


[target.'cfg(target_os = "android")'.dependencies]
magicleap_one_lumin_sdk_sys = { path = "C:/Users/Peter/Desktop/magicleap_one_lumin_sdk_sys" } #, git = "https://github.com/pkratten/magicleap-one-lumin-sdk-sys" }


[target.'cfg(target_os = "windows")'.dependencies]
bevy = { version = "0.11.2", default-features = false, features = [
    "bevy_render",
    "trace",
    "png",
    "jpeg",
    "bevy_pbr",
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_winit",
    "tonemapping_luts",
    "zstd",
    "ktx2",
] }

[package.metadata.android]
build_targets = ["aarch64-linux-android"]

[package.metadata.android.sdk]
target_sdk_version = 16
libc = "0.2.139"


[replace]
"bevy_asset:0.11.2" = { path = 'crates/bevy_asset_0.11.2' } # Created an asset_io dummy as the current asset_ios dont work with magic leap.
#"bevy_pbr:0.11.2" = { path = 'crates/bevy_pbr_0.11.2' } # Removed parallax mapping and prepass from pbr.wgsl
