[package]
name = "bevy_asset"
version = "0.11.2"
edition = "2021"
description = "Provides asset functionality for Bevy Engine"
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT OR Apache-2.0"
keywords = ["bevy"]

[features]
default = ["no_asset_io"]
filesystem_watcher = ["notify"]
debug_asset_server = ["filesystem_watcher"]
no_asset_io = []

[dependencies]
# bevy
bevy_app = "0.11.2"
bevy_diagnostic = "0.11.2"
bevy_ecs = "0.11.2"
bevy_log = "0.11.2"
bevy_reflect = { version = "0.11.2", features = ["bevy"] }
bevy_tasks = "0.11.2"
bevy_utils = "0.11.2"

# other
serde = { version = "1", features = ["derive"] }
crossbeam-channel = "0.5.0"
anyhow = "1.0.4"
thiserror = "1.0"
downcast-rs = "1.2.0"
fastrand = "1.7.0"
notify = { version = "6.0.0", optional = true }
parking_lot = "0.12.1"
async-channel = "1.4.2"

[target.'cfg(target_os = "android")'.dependencies]
bevy_winit = "0.11.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }
web-sys = { version = "0.3", features = ["Request", "Window", "Response"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

[dev-dependencies]
bevy_core = "0.11.2"
futures-lite = "1.4.0"
tempfile = "3.2.0"
