[package]
name = "bevy_pbr"
version = "0.11.2"
edition = "2021"
description = "Adds PBR rendering to Bevy Engine"
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT OR Apache-2.0"
keywords = ["bevy"]

[features]
webgl = []

[dependencies]
# bevy
bevy_app = "0.11.2"
bevy_asset = "0.11.2"
bevy_core_pipeline = "0.11.2"
bevy_ecs = "0.11.2"
bevy_math = "0.11.2"
bevy_reflect = { version = "0.11.2", features = ["bevy"] }
bevy_render = "0.11.2"
bevy_transform = "0.11.2"
bevy_utils = "0.11.2"
bevy_window = "0.11.2"
bevy_derive = "0.11.2"

# other
bitflags = "2.3"
# direct dependency required for derive macro
bytemuck = { version = "1", features = ["derive"] }
radsort = "0.1"
naga_oil = "0.8"
